apps/argocd/ingressroute.yaml
---
# Traefik IngressRoute for ArgoCD
# Access ArgoCD via: http://argocd.home.lan
#
# Prerequisites:
#   - Traefik is running with LoadBalancer service
#   - dnsmasq is configured to resolve *.home.lan to Traefik LoadBalancer IP
#   - ArgoCD is installed and running

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web  # HTTP entry point (port 80)
  routes:
    - match: Host(`argocd.home.lan`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
